--- a/public_html/public/assets/new-src/css/stylesheet.css
+++ b/public_html/public/assets/new-src/css/stylesheet.css
@@ -84,28 +84,16 @@ input.narrow {
 
 input[type='submit'], .button {
     display: inline-block;
-    zoom: 1;
-    vertical-align: baseline;
-    margin: 3px;
     outline: none;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    font: 14px/100% Arial, Helvetica, sans-serif;
-    padding: 3px 10px;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    font: 16px/38px "OpenSansRegular";
+    padding: 0 26px;
+    border-radius: 2px;
+    background: #59a200;
     color: #D9EEF7;
     border: solid 1px #59a200;
-    background: #0095CD;
-    background: -webkit-gradient(linear, left top, left bottom, from(#78c41c), to(#59a200));
-    background: -moz-linear-gradient(top, #78c41c, #59a200);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#78c41c', endColorstr='#59a200');
 }
 
 .button.big {
@@ -131,51 +119,49 @@ blockquote {
     margin-bottom: 5px;
 }
 
-.message {
-    border-radius: 3px 3px 3px 3px;
-    font-weight: bold;
+.flash-message {
+    border-radius: 2px;
     margin-bottom: 10px;
     overflow: hidden;
     padding: 10px 15px 10px 40px;
 }
 
-.message p {
+.flash-message p {
     float: left;
     padding: 0px;
     margin: 0px;
     width: 93%;
 }
 
-.message.errormsg {
-    background: url("/assets/images/html/error.gif") no-repeat scroll 12px 12px #FFECCE;
+.flash-message.errormsg {
+    background: url("/assets/images/html/error.gif") no-repeat scroll 12px center #FFECCE;
     border: 1px solid #E9C59B;
     color: #E3302C;
 }
 
-.message.success {
-    background: url("/assets/images/html/success.gif") no-repeat scroll 12px 12px #EDFBD8;
+.flash-message.success {
+    background: url("/assets/images/html/success.gif") no-repeat scroll 12px center #EDFBD8;
     border: 1px solid #BFDE84;
     color: #508600;
 }
 
-.message.info {
-    background: url("/assets/images/html/info.gif") no-repeat scroll 12px 12px #ECF9FF;
+.flash-message.info {
+    background: url("/assets/images/html/info.gif") no-repeat scroll 12px center #ECF9FF;
     border: 1px solid #BBDBE0;
     color: #0888C3;
 }
 
-.message.info a {
+.flash-message.info a {
     color: #0888C3;
 }
 
-
-.message.warning {
+.flash-message.warning {
     background: url("/assets/images/html/warning.gif") no-repeat scroll 12px 12px #FEFDE2;
     border: 1px solid #E5E181;
     color: #666666;
 }
 
-.message .close {
+.flash-message .close {
     background: url("/assets/images/html/close.png") no-repeat scroll 0 0 transparent;
     cursor: pointer;
     display: block;
@@ -186,7 +172,7 @@ blockquote {
     width: 16px;
 }
 
-.message .close:hover {
+.flash-message .close:hover {
     opacity: 1;
 }
 
@@ -309,8 +295,8 @@ div.sep {
 #newMessages a {
     font: 14px/30px "OpenSansSemibold";
     /*background: url("/assets/images/html/messages_middle.png");*/
-    background: rgb(89,162,0);
-    background: linear-gradient(0deg, rgba(89,162,0,1) 26%, rgba(119,195,27,1) 80%);
+    background: rgb(89, 162, 0);
+    background: linear-gradient(0deg, rgba(89, 162, 0, 1) 26%, rgba(119, 195, 27, 1) 80%);
     padding: 0px 25px;
     color: white;
     text-decoration: none;
@@ -1026,7 +1012,7 @@ body#fb {
     width: 340px;
     padding: 15px;
     border-radius: 15px;
-    box-shadow: 0px 0px 22px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 22px 0px rgba(0, 0, 0, 0.25);
     background: white;
 }
 
@@ -1117,8 +1103,8 @@ ul.menu, ul.clean {
 }
 
 ul.menu .head, ul.menu .head:hover {
-    background: rgb(89,162,0);
-    background: linear-gradient(0deg, rgba(89,162,0,1) 26%, rgba(119,195,27,1) 80%);
+    background: rgb(89, 162, 0);
+    background: linear-gradient(0deg, rgba(89, 162, 0, 1) 26%, rgba(119, 195, 27, 1) 80%);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     font: 16px/30px "OpenSansSemibold";
@@ -1127,8 +1113,8 @@ ul.menu .head, ul.menu .head:hover {
 }
 
 ul.menu li {
-    background: rgb(225,225,225);
-    background: linear-gradient(0deg, rgba(225,225,225,1) 26%, rgba(241,241,241,1) 80%);
+    background: rgb(225, 225, 225);
+    background: linear-gradient(0deg, rgba(225, 225, 225, 1) 26%, rgba(241, 241, 241, 1) 80%);
     font: 14px/24px arial;
 }
 
@@ -1151,8 +1137,8 @@ ul.menu li a:hover {
 }
 
 ul.menu li:hover {
-    background: rgb(254,140,0);
-    background: linear-gradient(0deg, rgba(254,140,0,1) 40%, rgba(254,102,0,1) 84%);
+    background: rgb(254, 140, 0);
+    background: linear-gradient(0deg, rgba(254, 140, 0, 1) 40%, rgba(254, 102, 0, 1) 84%);
 }
 
 ul.menu li.last {
@@ -1203,7 +1189,7 @@ ul.menu li.last:hover {
 }
 */
 
-#wall_entries .message {
+#wall_entries .flash-message {
     padding: 10px 0px;
     overflow: visible;
 }
@@ -1234,7 +1220,7 @@ ul.menu li.last:hover {
     text-decoration: none;
 }
 
-#wall_entries .entry .message {
+#wall_entries .entry .flash-message {
     font: 14px/20px Arial;
     color: #3f3f3f;
 }
