--- a/public_html/public/assets/new-src/css/stylesheet.css
+++ b/public_html/public/assets/new-src/css/stylesheet.css
@@ -967,13 +967,13 @@ body#fb {
 
 #footer {
     background: url("/assets/images/html/footer.png");
-    height: 45px;
+    height: 60px;
     width: 100%;
     margin-bottom: 35px;
     text-align: center;
     color: white;
     font: 14px Arial;
-    padding-top: 15px;
+    padding: 10px 0;
 }
 
 #footer a {
@@ -1053,33 +1053,6 @@ body#fb {
 .body.logged_in {
     padding: 15px 0px;
 }
-
-.body .left_col, .body .middle_col, .body .right_col {
-    float: left;
-}
-
-.body .middle_col {
-    width: 718px;
-}
-
-.body .middle_col.has_right {
-    margin-right: 23px;
-    width: 486px;
-}
-
-.body .middle_col.hasnt_left {
-    margin-right: 23px;
-}
-
-.body .left_col {
-    width: 208px;
-    margin-right: 23px;
-}
-
-.body .right_col {
-    width: 208px;
-}
-
 
 ul.menu, ul.clean {
     list-style-type: none;
@@ -2426,3 +2399,6 @@ img.icon {
     text-align: right;
 }
 
+.copyrights {
+    margin-top: 5px;
+}
