--- a/public_html/public/assets/new-src/css/players.css
+++ b/public_html/public/assets/new-src/css/players.css
@@ -20,6 +20,10 @@
     /*font-size: 18px;*/
 }
 
+.save-lineup{
+    margin: 10px 0px;
+}
+
 #LineupTable .position > div
 {
     text-align: center;
